Fix alignment for PrimitivePanelControl

--- a/src/components/PrimitivePanelControls/PrimitivePanelControls.scss
+++ b/src/components/PrimitivePanelControls/PrimitivePanelControls.scss
@@ -11,12 +11,14 @@
 }
 
 .PrimitivePanelControl {
-  display: block;
-  flex-shrink: 0;
   width: 24px;
   height: 24px;
   margin: 4px;
   padding: 0;
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  justify-content: center;
   background: none;
   border: 1px solid #DDD;
   border-radius: 4px;
